--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  font-family: Inter, sans-serif;
+  font-family: Karla, sans-serif;
   background-color: #0a1f2c;
   padding: 30px;
   height: 100vh;
@@ -26,11 +26,11 @@ main {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
-.dieContainer {
+.dice-Container {
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(5, 1fr);
@@ -43,8 +43,20 @@ main {
   border-radius: 10px;
   border: none;
   background-color: white;
-  font-family: Inter, sans-serif;
+  font-family: Karla, sans-serif;
   font-size: 1.75rem;
   font-weight: bold;
+  cursor: pointer;
+}
+.rollDice-btn {
+  width: 100px;
+  height: 50px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 6px;
+  background-color: #5035ff;
+  color: white;
+  font-size: 1.2rem;
+  font-family: Karla, sans-serif;
+  border: none;
   cursor: pointer;
 }
