--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   font-family: Karla, sans-serif;
   background-color: #0a1f2c;
-  padding: 30px;
+  padding: 40px;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -30,6 +30,17 @@ main {
   align-items: center;
 }
 
+.title {
+  font-size: 50px;
+  margin: 0;
+}
+.instructions {
+  font-family: Karla, sans-serif;
+  font-weight: 400;
+  margin: 0px 30px 0px 30px;
+  text-align: center;
+}
+
 .dice-Container {
   display: grid;
   grid-template-rows: repeat(2, 1fr);
@@ -49,8 +60,11 @@ main {
   cursor: pointer;
 }
 .rollDice-btn {
-  width: 100px;
   height: 50px;
+  white-space: nowrap;
+  width: auto;
+  padding: 6px 21px;
+
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 6px;
   background-color: #5035ff;
